@@ -3,19 +3,23 @@ package vn.java.EcommerceWeb.service.impl;
 import jakarta.mail.MessagingException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import vn.java.EcommerceWeb.dto.request.CartItemRequest;
 import vn.java.EcommerceWeb.dto.request.OrderRequest;
 import vn.java.EcommerceWeb.enums.OrderStatus;
+import vn.java.EcommerceWeb.enums.PaymentMethod;
+import vn.java.EcommerceWeb.enums.PaymentStatus;
 import vn.java.EcommerceWeb.exception.ResourceNotFoundException;
 import vn.java.EcommerceWeb.model.*;
 import vn.java.EcommerceWeb.repository.*;
 import vn.java.EcommerceWeb.service.MailService;
+import vn.java.EcommerceWeb.service.MomoService;
 import vn.java.EcommerceWeb.service.OrderService;
-import vn.java.EcommerceWeb.service.PaymentService;
 
 import java.io.UnsupportedEncodingException;
+import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -30,13 +34,13 @@ public class OrderServiceImpl implements OrderService {
     private final OrderRepository orderRepository;
     private final UserRepository userRepository;
     private final ProductRepository productRepository;
-    private final PaymentService paymentService;
-    private final CartRepository cartRepository;
     private final CartItemRepository cartItemRepository;
     private final MailService mailService;
+    private final PaymentRepository paymentRepository;
+    private final MomoService momoService;
 
     @Override
-    public void createOrder(OrderRequest request) throws MessagingException, UnsupportedEncodingException {
+    public String createOrder(OrderRequest request) throws MessagingException {
         log.info("Create order starting...");
         User user = userRepository.findById(request.getUserId())
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
@@ -100,13 +104,86 @@ public class OrderServiceImpl implements OrderService {
 
         }
         productRepository.saveAll(productMap.values());
-        orderRepository.save(order);
 
-        Payment payment = paymentService.processPayment(order,cartItemList, request.getPaymentMethod());
-
+        Payment payment = Payment.builder()
+                .order(order)
+                .paymentMethod(request.getPaymentMethod())
+                .paymentStatus(PaymentStatus.PENDING)
+                .build();
+        order.setPayment(payment);
         orderRepository.save(order);
+        log.info("Order created successfully");
+        String paymentUrl = null;
+        if (request.getPaymentMethod() == PaymentMethod.COD) {
+            log.info("Payment with COD starting........");
+            payment.setPaymentStatus(PaymentStatus.UNPAID);
+            order.setOrderStatus(OrderStatus.PENDING_CONFIRMATION);
+            log.info("Payment with COD completed");
+            cartItemRepository.deleteByCartIdAndProductIdIn(order.getUser().getCart().getId(), productIds);
+            log.info("Cart items deleted");
+            //Gửi mail xác nhận
+            sendMailConfirm(order, payment);
+            orderRepository.save(order);
+            log.info("Create order successfully");
+            paymentUrl = "Đơn hàng của bạn đã được tạo thành công. Vui lòng kiểm tra email để xác nhận đơn hàng";
+        } else if (request.getPaymentMethod() == PaymentMethod.MOMO) {
+            log.info("Payment with MOMO starting........");
+
+            String payUrl = momoService.createPaymentUrl(order.getId(), order.getTotalPrice(), "Thanh toán đơn hàng #" + order.getId());
+            payment.setPaymentUrl(payUrl);
+            orderRepository.save(order);
+            log.info("Payment with MOMO has been created payUrl");
+            paymentUrl = payUrl;
+        }
+        return paymentUrl;
+    }
+
+    @Override
+    public void updateOrderState(Long orderId, String resultCode) {
+        log.info("Update order state when payment with momo starting...");
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
+        Payment payment = order.getPayment();
+        log.warn("OrderID: {}, resultCode: {}", orderId, resultCode);
+        if ("0".equals(resultCode)) {
+            order.setOrderStatus(OrderStatus.CONFIRMED);
+            payment.setPaymentStatus(PaymentStatus.PAID);
+            log.info("Payment with momo successfully");
+
+            //Lay danh sach productIds tu orderItems
+            List<Long> productIds = order.getOrderItems()
+                    .stream()
+                    .map(orderItem -> orderItem.getProduct().getId())
+                    .toList();
+
+            //Xoa san pham trong cart
+            cartItemRepository.deleteByCartIdAndProductIdIn(order.getUser().getCart().getId(), productIds);
+            log.info("Cart items deleted after payment with momo successfully");
+
+        } else {
+            order.setOrderStatus(OrderStatus.CANCELLED);
+            payment.setPaymentStatus(PaymentStatus.FAILED);
+            log.info("Payment with momo failed, restoring stock..........");
+
+            for (OrderItem orderItem : order.getOrderItems()) {
+                Product product = orderItem.getProduct();
+                product.setStock(product.getStock() + orderItem.getQuantity());
+            }
+            productRepository.saveAll(order.getOrderItems()
+                    .stream()
+                    .map(OrderItem::getProduct)
+                    .collect(Collectors.toList()));
+            log.info("Stock restored for failed payment successfully");
+        }
+
+        paymentRepository.save(payment);
+        orderRepository.save(order);
+        log.info("Update order state successfully");
+    }
+
+
+    private void sendMailConfirm(Order order, Payment payment) throws MessagingException {
         String mailTitle = "BookStore - Xác nhận đơn hàng #" + order.getId() + " của bạn thành công";
-
         // Mẫu HTML
         String content = """
                     <html>
@@ -138,7 +215,6 @@ public class OrderServiceImpl implements OrderService {
                                     <p><strong>📌 Mã đơn hàng:</strong> %s</p>
                                     <p><strong>📆 Ngày đặt hàng:</strong> %s</p>
                                     <p><strong>📍 Địa chỉ nhận hàng:</strong> %s</p>
-                                    
                                     <p><strong>🛒 Sản phẩm đã đặt:</strong></p>
                                     <table class="product-table">
                                         <thead>
@@ -179,13 +255,9 @@ public class OrderServiceImpl implements OrderService {
         // Danh sách sản phẩm
         List<Map<String, Object>> products = order.getOrderItems()
                 .stream()
-                .map(item -> Map.<String, Object>of(
-                        "name", (Object) item.getName(),
-                        "quantity", (Object) item.getQuantity(),
-                        "price", (Object) item.getPriceAtOrder(),
-                        "total", (Object) (item.getPriceAtOrder() * item.getQuantity())
-                ))
-                .collect(Collectors.toList());
+                .map(item -> Map.<String, Object>of("name", item.getName(), "quantity", item.getQuantity(), "price", item.getPriceAtOrder(), "total", item.getPriceAtOrder() * item.getQuantity()))
+                .toList();
+
 
         StringBuilder productTableHtml = new StringBuilder();
         for (Map<String, Object> product : products) {
@@ -206,28 +278,46 @@ public class OrderServiceImpl implements OrderService {
         }
 
         // Thay thế dữ liệu vào nội dung HTML
-        String formattedContent = String.format(
-                content,
-                user.getFullName(),
-                "BookStore",
-                order.getId(),
-                order.getCreatedAt(),
-                order.getRecipientName() + " - " + order.getRecipientAddress() + " - " + order.getRecipientPhone(),
-                productTableHtml.toString(),
-                order.getTotalPrice(),
-                payment.getPaymentMethod().getDisplayName(),
-                payment.getPaymentStatus().getDisplayName(),
-                order.getOrderStatus().getDisplayName(),
-                "https://yourwebsite.com/track-order/" + order.getId(),
-                "093 252 9896",
-                "lehuy099@gmail.com",
-                "BookStore",
-                "BookStore",
-                "https://yourwebsite.com"
-        );
+        String formattedContent = String.format(content, order.getUser()
+                .getFullName(), "BookStore", order.getId(), order.getCreatedAt(), order.getRecipientName() + " - " + order.getRecipientAddress() + " - " + order.getRecipientPhone(), productTableHtml, order.getTotalPrice(), payment.getPaymentMethod()
+                .getDisplayName(), payment.getPaymentStatus().getDisplayName(), order.getOrderStatus()
+                .getDisplayName(), "https://yourwebsite.com/track-order/" + order.getId(), "093 252 9896", "lehuy099@gmail.com", "BookStore", "BookStore", "https://yourwebsite.com");
 
-        mailService.sendMail(user.getEmail(), mailTitle, formattedContent, null);
-
-        log.info("Create order successfully");
+        mailService.sendMail(order.getUser().getEmail(), mailTitle, formattedContent, null);
     }
+
+    @Override
+    @Scheduled(fixedDelay = 60000)
+    public void checkExpiredPaymentOrders() {
+        log.info("Checking for expired Momo payments...");
+
+        Date expirationTime = new Date(System.currentTimeMillis() - (20 * 60 * 1000)); //Lấy thời gian 20p
+
+        List<Order> expiredOrders = orderRepository.findByOrderStatusAndUpdatedAtBefore(OrderStatus.PENDING,
+                PaymentMethod.MOMO, PaymentStatus.PENDING, expirationTime);
+        if(expiredOrders.isEmpty()) {
+            log.info("No expired payment found");
+            return;
+        }
+        for (Order order : expiredOrders) {
+            log.info("Order {} has expired, restoring stock..........", order.getId());
+            order.setOrderStatus(OrderStatus.CANCELLED);
+            order.getPayment().setPaymentStatus(PaymentStatus.EXPIRED);
+
+            //Hoan lai stock
+            for (OrderItem orderItem : order.getOrderItems()) {
+                Product product = orderItem.getProduct();
+                product.setStock(product.getStock() + orderItem.getQuantity());
+            }
+            productRepository.saveAll(order.getOrderItems()
+                    .stream()
+                    .map(OrderItem::getProduct)
+                    .collect(Collectors.toList()));
+            paymentRepository.save(order.getPayment());
+            orderRepository.save(order);
+            log.info("Order #{} marked as expired and stock restored", order.getId());
+            log.info("Stock restored for expired payment successfully");
+        }
+    }
+
 }
